Fixed bleeding section again

--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -68,3 +68,9 @@
     justify-content: center;
   }
 }
+
+@media screen and (max-width: 600px) {
+    .text-container{
+        width: 100% !important;
+    }
+}
